--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>SorryBlue</title>
     <link rel="icon" href="./img/yin.gif" />
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <head>
+        <div id="margin"></div>
+    </head>
+    <video width="100%" height="100%" autoplay="autoplay" controls>
+        <source src="./video/hero.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
