--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 <body>
     <head>
-        <div id="margin"></div>
+        <a href="">
+            <img src="./img/logo.png" alt="">
+            <p>Global</p>
+        </a>
     </head>
-    <video width="100%" height="100%" autoplay="autoplay" controls>
-        <source src="./video/hero.mp4" type="video/mp4">
-    </video>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
